mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  labels:
    app: mlflow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/auth-url: "https://oauth2.qraftemp.com/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.qraftemp.com/oauth2/start?rd=https%3A%2F%2F$host$escaped_request_uri"
spec:
  tls:
  - hosts:
    - mlflow.qraft.ai
    secretName: mlflow-qraft-ai-tls
  rules:
  - host: mlflow.qraft.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
